# internal/pkg/datastruct/size.go
@@ -1,0 +1,9 @@
+package datastruct
+
+const SizeTableName = "size"
+
+type Size struct {
+	ID       int64  `db:"id"`
+	Name     string `db:"name"`
+	Category string `db:"category"`
+}
